2009-06-23  Miles Bader  <miles@gnu.org>

	* display.texi (Scrolling): Document `recenter-redisplay'

2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.1.

2009-06-17  Kenichi Handa  <handa@m17n.org>

	* mule.texi (Charsets): Update the description for the new charset.
	(list-character-sets): New findex.
	(Language Environments): Add @anchor{Describe Language Environment}.

2009-06-10  Chong Yidong  <cyd@stupidchicken.com>

	* basic.texi (Moving Point): Fix tag.

	* picture-xtra.texi (Insert in Picture): Use <next> and <prior>.

	* mini.texi (Completion Commands): Decapitalize <next> and <prior>, and
	use camel-case for PageUp and PageDown.

	* display.texi (Scrolling): Decapitalize <next> and <prior>, and use
	camel-case for PageUp and PageDown.

	* calendar.texi (Scroll Calendar): Decapitalize <next> and <prior>.

	* search.texi (Isearch Scroll): Add isearch-allow-scroll to index.
	(Isearch Scroll): Decapitalize <next> and <prior>.

2009-06-09  Agustín Martín <agustin.martin@hispalinux.es>

	* fixit.texi (Spelling): Set default dictionary. Improve
	descriptions (Bug#2554)

2009-06-08  David Reitter  <david.reitter@gmail.com>

	* macos.texi (Color panel, Font panel): Remove mention of Save Options,
	since saving colors and faces set this way is not implemented.
	(Environment variables): Remove mention of mac-fix-env, which is
	scheduled to be removed.

2009-06-04  Chong Yidong  <cyd@stupidchicken.com>

	* custom.texi (Init Examples): Add example of changing load-path.

	* building.texi (Lisp Libraries): Add example of changing
	load-path (Bug#3446).

2009-05-28  Chong Yidong  <cyd@stupidchicken.com>

	* mark.texi (Mark): Further clarifications.
	(Setting Mark): Emphasize that C-SPC activates the mark.

2009-05-28  Chong Yidong  <cyd@stupidchicken.com>

	* mark.texi (Mark): Clarify introduction.  Mention disabling Transient
	Mark mode.
	(Using Region, Persistent Mark): Use "active mark" instead of "active
	region".
